cabal-version:      3.0
build-type:         Simple
name:               hedis-effectful
version:            1.0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           Control
maintainer:         andrzej@rybczak.net
author:             Andrzej Rybczak
synopsis:           Adaptation of the hedis library for the effectful ecosystem.

description:        Adaptation of the @<https://hackage.haskell.org/package/hedis hedis>@ library for the @<https://hackage.haskell.org/package/effectful effectful>@ ecosystem.

extra-source-files:
  CHANGELOG.md
  README.md

tested-with: GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.4 || ==9.6.1

bug-reports: https://github.com/scrive/hedis-effectful/issues
source-repository head
  type:     git
  location: https://github.com/scrive/hedis-effectful.git

common language
    ghc-options:        -Wall -Wcompat -Wno-unticked-promoted-constructors

    default-language:   GHC2021

    default-extensions: BangPatterns
                        ConstraintKinds
                        DataKinds
                        LambdaCase
                        NoStarIsType
                        TypeFamilies

library
    import:         language

    build-depends:    base                >= 4.13      && < 5
                    , effectful-core      >= 1.0.0.0   && < 3.0.0.0
                    , hedis               ^>= 0.15

    hs-source-dirs:  src

    exposed-modules: Effectful.Redis
